Downgrade from Java 17 to Java 8, from Spring Boot 3.0.4 to 2.5.4
- jakarta -> javax
- remove @Id and GenerationType.UUID
- toList() -> collect(Collectors.toList())
- Security with WebSecurityConfigurerAdapter
- remove File Upload feature