@@ -3,11 +3,12 @@ package com.onurhizar.gamepass.controller;
 import com.onurhizar.gamepass.model.request.PaymentRequest;
 import com.onurhizar.gamepass.model.response.InvoiceResponse;
 import com.onurhizar.gamepass.service.InvoiceService;
-import jakarta.validation.Valid;
+import javax.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/invoice")
@@ -18,7 +19,7 @@ public class InvoiceController {
     @GetMapping
     public List<InvoiceResponse> listInvoices(){
         return invoiceService.listInvoices()
-                .stream().map(InvoiceResponse::fromEntity).toList();
+                .stream().map(InvoiceResponse::fromEntity).collect(Collectors.toList());
     }
 
     @GetMapping("{id}")
